--- a/app/views/user_delete_view.phtml
+++ b/app/views/user_delete_view.phtml
@@ -23,7 +23,7 @@
                         <a class="nav-link" href="/">Usuarios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Crear</span></a>
+                        <a class="nav-link" href="/crear">Crear</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Actualizar</a>
